chore: align the code